# pserver

./: CMakeLists.txt  LICENSE  main.cpp  toolchain-gcc-linux-gnueabihf.cmake
cmake/: BaseConfiguration.cmake  platform.cmake  prebuild.sh
cmake/CMakeModules/: FindPkgMacros.cmake  FindPoco.cmake
config/: logger.properties
src/: BuildInfo.h  Connection.cpp  Connection.h  Const.h  EchoConnection.cpp  EchoConnection.h  MeasureConnection.cpp  MeasureConnection.h  Server.cpp  Server.h  Voltage.cpp  Voltage.h
src/modules/: CMakeLists.txt
src/service/: ServerApplication.cpp  ServerApplication.h  ServiceApplication.cpp  ServiceApplication.h  ServiceName.cpp  ServiceName.h
src/tasks/: AbstractTask.cpp  AbstractTask.h  EchoTask.cpp  EchoTask.h  FittingTask.cpp  FittingTask.h  GetTask.cpp  GetTask.h  MeasureTask.cpp  MeasureTask.h  ScanResonanceTask.cpp  ScanResonanceTask.h  StatusTask.cpp  StatusTask.h  TaskFactory.cpp  TaskFactory.h  UniversalTask.cpp  UniversalTask.h
src/utils/: JsonHelper.cpp  JsonHelper.h  LogConfiguration.cpp  LogConfiguration.h  Logger.h  ProductInfo.h  StringHelper.cpp  StringHelper.h
